use java 17 on dev and prod environments